# SearchEngine

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/index/: index.hpp  main.cpp
lib/search/: main.cpp  parsing.hpp  search.hpp
lib/tests/: CMakeLists.txt  tests.cpp
lib/trie/: trie.cpp  trie.hpp
test/: 1.txt  2.txt  3.txt
